Spacing Issues

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,10 @@
     #infoRight{
         width: 95% !important;
     }
+
+    #infoTitle{
+        font-size: 7vw !important;
+    }
 }
 
 
@@ -58,6 +62,7 @@ html,body{
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
+    background-color: #79ADF2;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     -moz-user-select: none;
     -webkit-user-select: none;
@@ -316,6 +321,7 @@ html,body{
 
 #infoP{
     filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.25));
+    padding: 0 1em;
 }
 
 a{
